tests/NormalTests/paczka1/fuzzy1/67364234.err
Error in line 2: BOhmi S160 36,3
Error in line 1: Pu2YmrkerM A212 60,8
Error in line 5: Pu2YmrkerM S160 75,4
Error in line 8: RLav S947 28,4
Error in line 23: rWwlPAOCFq A261 -1,1
Error in line 13: rWwlPAOCFq A261 91,0
Error in line 38: rWwlPAOCFq A212 -1,1
Error in line 30: A212 S947 9,5
